:constructor: add changes on global styles

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -36,6 +36,8 @@ body, input, textarea, select, button{
 
 button{
     cursor: pointer;
+    background-color: transparent;
+    border: none;
 }
 
 a{
