--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -38,17 +38,18 @@
     margin-left: 5rem;
     height: 5rem;
 
-    li {
+    a {
       display: inline-block;
       position: relative;
       padding: 0 0.5rem;
       height: 3rem;
       line-height: 5rem;
       color: var(--gray-300);
+      cursor: pointer;
 
       transition: color 0.2s;
 
-      & + li {
+      & + a {
         margin-left: 2rem;
       }
 
